# advertising-knowledge-center

./: .claudeignore  .dockerignore  .env.example  .gitignore  AD_FORMAT_GRANULARITY_FIX.md  AD_FORMAT_MISSING_FIX.md  AD_FORMAT_SMART_FILTER_FIX.md  ALL_FIXES_COMPLETE.md  AUDIENCE_AGGREGATION_FIX.md  AUDIENCE_QUERY_OPTIMIZATION.md  BUDGET_CALCULATION_FIX.md  BUDGET_FIX_SUMMARY.md  CAMPAIGN_ID_FIX.md  CLARIFICATION_LOOP_FINAL_SUMMARY.md  CLARIFICATION_LOOP_FIX.md  CLARIFICATION_LOOP_INDEX.md  CLARIFICATION_LOOP_RESOLUTION.md  CLARIFICATION_LOOP_SECONDARY_ISSUES.md  CONFIG_IMPORT_FIX.md  CONVERSATION_FLOW_FIX.md  CONVERSATION_FLOW_FIX_QUICK_REFERENCE.md  DATAFUSION_BUDGET_ANALYSIS.md  DATA_FUSION_ARCH_FIX.md  DATA_FUSION_FIX.md  DATA_FUSION_STANDARDIZATION_FIX.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  EMPTY_RESULTS_CLARIFICATION_FIX.md  EXECUTION_GRANULARITY_FIX.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_NOTES.md  METRICS_UPDATE_VERIFICATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_SQL_FIX.md  QUICK_START_VERIFICATION.md  ROOT_CAUSE_CLARIFICATION_FIX.md  SESSION_SUMMARY_ALL_FIXES.md  SQL_SYNTAX_FIX.md  SUPERVISOR_CONTEXT_FIX.md  (+26 more)
agent/: analyst.py  analyst_graph.py  analyst_v2.py  graph.py  reporter.py  retriever.py  router.py  state.py
backend/: server.py
config/: column_mapping.json  database.py  llm.py  registry.py
documents/: SQL_DEBUGGING_GUIDE.md  SQL_OPTIMIZATION_CHECKLIST.md  clickhouse_schema_context.md  domain_knowledge.md  mysql_schema_context.md
frontend/: ui.py
graph/: builder.py  graph.py
nodes/: ambiguity_detector.py  ambiguity_resolver.py  ask_for_clarification.py  ask_for_missing_info.py  campaign_agent.py  campaign_node_wrapper.py  chitchat.py  clickhouse_executor.py  clickhouse_generator.py  clickhouse_validator.py  data_analyst.py  data_fusion.py  data_fusion_legacy.py  entity_resolver.py  entity_search.py  error_handler.py  general_responder.py  intent_analyzer.py  intent_router.py  parallel_executor.py  performance_agent.py  performance_node_wrapper.py  presentation_planner.py  query_analyzer.py  query_executor.py  response_formatter.py  response_synthesizer.py  slot_manager.py  sql_checker.py  sql_constraint_checker.py  sql_executor.py  sql_generator.py  (+3 more)
(+117 files in other folders)
