[project]
name = "text2sql"
version = "3.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.9.3",
    "clickhouse-connect>=0.10.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.1",
    "langchain-google-genai>=4.0.0",
    "langgraph>=1.0.5",
    "langgraph-api>=0.5.42",
    "langgraph-cli[inmem]>=0.4.10",
    "langserve>=0.3.3",
    "mysql-connector-python>=9.5.0",
    "pandas>=2.3.3",
    "paramiko>=4.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "sshtunnel>=0.4.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
